objects/Hotel__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Hotels</relationshipLabel>
        <relationshipName>Hotels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckIn__c</fullName>
        <label>CheckIn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckOut__c</fullName>
        <label>CheckOut</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePerNight__c</fullName>
        <label>PricePerNight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RoomType__c</fullName>
        <label>RoomType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delux</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip</label>
        <referenceTo>Trip__c</referenceTo>
        <relationshipLabel>Hotels</relationshipLabel>
        <relationshipName>Hotels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hotel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>